[package]
name = "catr"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rand = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
